Fixed cleanup of QApplication when unloading ActiveQt DLL

When an ActiveQt server starts, it creates a QApplication and tries to
mimic the behavior of QCoreApplication::exec(). However, when
destroying the QApplication in qaxserverdll.cpp DllCanUnloadNow(), it
now performs the same cleanup as QCoreApplication::exec(). This is a
partial fix for QTBUG-56172.

Task-number: QTBUG-56172
Change-Id: Ibf8c411f8a1534beee61a738be3fd414de73f0ad
Reviewed-by: Fredrik Orderud <forderud@gmail.com>
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>