src/activeqt/control/control.pro
@@ -10,6 +10,7 @@ mingw: DEFINES += QT_NEEDS_QMAIN
 HEADERS =   qaxaggregated.h \
             qaxbindable.h \
             qaxfactory.h \
+            qclassfactory_p.h \
             ../shared/qaxtypes.h
 
 SOURCES =   qaxaggregated.cpp \
